Fix coordinates z-index

--- a/src/components/Block/Block.module.css
+++ b/src/components/Block/Block.module.css
@@ -9,3 +9,8 @@
   background-size: cover;
   text-align: center;
 }
+
+.coordinates {
+  position: relative;
+  z-index: 4;
+}
